--- a/人工智能.md
+++ b/人工智能.md
@@ -596,6 +596,73 @@ python实现：[huffmanCoding.py](codes\huffmanCoding.py)
 基本思想如下：对于我们在训练原始文本中遇到的每一个单词，它们都有一定概率被我们从文本中删掉，而这个被删除的概率与单词的频率有关。负采样（negative sampling）解决了这个问题，它是用来提高训练速度并且改善所得到词向量的质量的一种方法。不同于原本每个训练样本更新所有的权重，负采样每次让一个训练样本仅仅更新一小部分的权重，这样就会降低梯度下降过程中的计算量。
 
 
+## 模型剪枝
+
+通过模型剪枝可以减少运算量，压缩模型。pytorch提供了用于模型剪枝的方法，详见 [Pruning Tutorial — PyTorch Tutorials 2.6.0+cu124 documentation](https://pytorch.org/tutorials/intermediate/pruning_tutorial.html#pruning-tutorial)。
+
+模型剪枝一般是对权重或者偏置加上一个0-1mask，即将部分参数置为0。如通过计算参数的1-范数、2-范数等，将其中较小值对应的参数置为0。
+
+此外还有直接去除单个通道，注意力的head，甚至整个层的pruning方法
+
+
+### Adapting by Pruning: A Case Study on BERT
+
+该方法对BERT模型进行剪枝，将BERT模型的参数分成两个部分，分别为不训练但进行剪枝的参数，还有仅训练不进行剪枝的参数。
+
+用 $f(x;w_0,p)$ 表示用于下游任务的模型，$w_0$ 是预训练模型的权重（不训练但剪枝），$p$ 为任务特定权重（训练但不剪枝）。目标是找到一个 $w_0$ 的二元mask $m^*$，使得
+
+$$
+{m^*} = \arg {\min _{m \in {{\left\{ {0,1} \right\}}^d}}}\mathop {\min }\limits_{p \in {R^k}} L(m,p)
+$$
+其中
+
+$$
+L(m,p) = {\left| {{D_{train}}} \right|^{ - 1}}\sum\limits_{z \in {D_{train}}} {l(z;m,p)} 
+$$
+$$
+l(z;m,p) = G(f(x;{w_0} \odot m,p),y),z = (x,y)
+$$
+这里的 $G$ 是一个可微分的损失函数，如最小二乘损失或交叉熵损失，$z$ 是一个输入标签对（$x$ 是输入，$y$ 是标签，如文本情感分类任务中，$x$ 为文本，$y$ 则为文本对应的情感）。这里的 $p$ 可以直接通过优化器反向传播优化，但是对于mask而言，由于是二元mask，所以需要进行近似处理，论文中使用sigmoid函数进行近似
+$$
+{m_t} = \sigma (t\theta ) = {\left[ {1 + \exp ( - t\theta )} \right]^{ - 1}},t \gg 1
+$$
+这里的 $\theta\in R^d$ 是一个与m维度相同的矢量，$t$ 为超参数。这样近似之后损失可以写成
+
+$$
+{L_t}(\theta ) = {\left| {{D_{train}}} \right|^{ - 1}}\sum\limits_{z \in {D_{train}}} {l(z;{m_t},p)} 
+$$
+损失的梯度可以写成
+
+$$
+{\nabla _\theta }{L_t}(\theta ) = {\left| {{D_{train}}} \right|^{ - 1}}\sum\limits_{z \in {D_{train}}} {{\nabla _{{m_t}}}l(z;{m_t},p) \odot {\nabla _\theta }{m_t}} 
+$$
+当 $t\to \infty$ 时，有 $m_t\to m$，但是这也意味着对于梯度而言，也将趋于0
+$$
+{\nabla _\theta }{m_t} = {m_t} \odot \left( {1 - {m_t}} \right) \to 0
+$$
+为了避免这种情况，在前向传播时使用较大的 $t$，在sigmoid梯度计算时使用较小的 $t$，$t_l$ 表示较大的 $t$ 值，$t_s$ 表示较小的 t 值。
+
+$$
+{{\tilde \nabla }_\theta }{L_t}(\theta ) = {\left| {{D_{train}}} \right|^{ - 1}}\sum\limits_{z \in {D_{train}}} {{\nabla _{{m_t}}}l(z;{m_{{t_l}}},p) \odot {\nabla _\theta }{m_{{t_s}}}} 
+$$
+SGD 更新公式为
+$$
+\eqalign{
+  & {\theta _{i + 1}} = {\theta _i} - {\alpha _i}{{\tilde \nabla }_\theta }l\left( {z;{m_{{t_l}}},{m_{{t_s}}},p} \right)  \cr 
+  & {p_{i + 1}} = {p_i} - {\beta _i}{\nabla _p}l(z;m,p) \cr} 
+$$
+在经过 T 步后，可以通过设置$\theta_t$ 中所有正值对应的mask为1，所有负值对应的mask为0来得到二元mask。为了鼓励更多的负值，可以在更新 $\theta$ 时添加正规项
+
+$$
+{\theta _{i + 1}} = {\theta _i} - {\alpha _i}{{\tilde \nabla }_\theta }l\left( {z;{m_{{t_l}}},{m_{{t_s}}},p} \right) - {\gamma _i}1
+$$
+$\theta_0$ 从均值为0.01，方差为0.001的正态分布中初始化。
+
+### Data-Aware Adaptive Pruning Model Compression Algorithm Based on a Group Attention Mechanism and Reinforcement Learning
+
+针对卷积网络的一种剪枝方法，利用上一层的信息计算通道的注意力分配作用于下一层。为了针对不同的数据，使用强化学习的方法来决策选择的参数集。
+
+
 
 # 机器学习
 
@@ -1918,3 +1985,97 @@ $$
 基本上还是Hifi-gan，判别器将MSD换成了MRD（多分辨率判别器，对信号进行不同stft size 和 stride size 的 stft），此外还更换了激活函数为Snake激活函数，此外还有别的一些改进。
 
 BigVGAN使用大规模数据集进行训练，效果会更好。
+
+
+
+# 新模型
+
+## KAN
+
+基于 Kolmogorov-Arnold 表示定理提出的一种类似MLP的网络。
+
+MLP 基于universal approximation theorem，对于单层MLP，输出为
+
+$$
+f(x) = \sum\nolimits_{i = 1}^M {{c_i} \cdot \sigma \left( {w_i^Tx + {b_i}} \right)} 
+$$
+M 为隐层的神经元数量，$w_i$ 为输入权重，$c_i$ 为输出权重，$\sigma$ 为激活函数。
+
+KAN则基于Kolmogorov-Arnold 表示定理，即每个多元连续函数都可以表示为有限数量的单变量连续函数的两层嵌套叠加
+$$
+f(x) = \sum\nolimits_{q = 1}^{2n + 1} {{\Phi _q}\left( {\sum\limits_{p = 1}^n {{\phi _{q,p}}({x_p})} } \right)} 
+$$
+假设 $f(x)$ 是一个 $[0,1]\to \mathbb{R}$ 的函数，则 $\phi_{q,p}$ 是一个 $[0,1]\to \mathbb{R}$ 的函数，而 $\Phi _q$ 是一个 $\mathbb{R} \to \mathbb{R}$ 的函数。
+
+KAN需要学习单变量函数 $\phi_{q,p}$ 和 $\Phi _q$，可以将每个一维函数参数化为若干个 B-样条曲线的组合，对于一个 $n_{in}$ 维输入和 $n_{out}$ 维输出的KAN层，可以定义为1维函数的矩阵
+
+$$
+{\bf{\Phi }} = \left\{ {{\phi _{q,p}}} \right\},p = 1,2, \cdots ,{n_{in}},\quad q = 1,2, \cdots ,{n_{out}}
+$$
+所以Kolmogorov-Arnold 表示定理中的内部函数可以表示为一个 $n_{in}=n$，$n_{out}=2n+1$ 的KAN层，外部函数则能表示为一个$n_{in}=2n+1$，$n_{out}=1$ 的KAN层。
+
+KAN在小规模的AI+Science任务中会比MLP有更好的效果。
+
+# LLM
+
+## minimind
+
+### 基本结构
+
+minimind 是一个简化的用于学习训练LLM模型的库。
+
+MiniMind 中包括了两种结构的模型：
+
+1. MiniMind-Dense，类似 [Llama3.1](https://ai.meta.com/blog/meta-llama-3-1/)，使用了Transformer的Decoder-Only结构，跟GPT-3的区别在于：采用了GPT-3的预标准化方法，也就是在每个Transformer子层的输入上进行归一化，而不是在输出上。具体来说，使用的是RMSNorm归一化函数。用SwiGLU激活函数替代了ReLU，这样做是为了提高性能。像GPT-Neo一样，去掉了绝对位置嵌入，改用了旋转位置嵌入（RoPE），这样在处理超出训练长度的推理时效果更好。
+
+![](https://github.com/jingyaogong/minimind/raw/master/images/LLM-structure.png)
+
+2. MiniMind-MoE模型，基于Llama3和[Deepseek-V2](https://arxiv.org/pdf/2405.04434)中的MixFFN混合专家模块。DeepSeek-V2在前馈网络（FFN）方面，采用了更细粒度的专家分割和共享的专家隔离技术，以提高Experts的效果。
+
+![](https://github.com/jingyaogong/minimind/raw/master/images/LLM-structure-moe.png)
+
+
+### 训练流程
+
+#### 预训练
+
+LLM首先要学习的并非直接与人交流，而是让肚子中充满知识的墨水，至于墨水理论上喝的越饱越好，让模型产生大量的对世界的认知积累。
+
+预训练就是让Model先埋头苦学大量基本的知识，例如从维基百科、新闻、常识、书籍等。LLM 无监督的从大量的文本数据中压缩知识到自己模型的权重，目的是：学会词语接龙。例如我们输入“秦始皇是”四个字，它在大量学习后能预测出下一句话大概率是“中国的第一位皇帝”。
+‘
+预训练时的数据为一行文本，经过tokenizer后变成一段数字，假设数字长度为 $n$，输入则为前 $n-1$ 个数字，而标签则为后 $n-1$ 个数字，即预训练是让模型能根据当前信息和历史信息预测之后的信息。损失函数为交叉熵损失。
+
+
+#### 有监督微调
+
+经过预训练，半成品LLM此时已经掌握了几乎所有的语言知识和百科常识。此时它还不会与人聊天，相反它只会无脑地进行输入词语的接龙，生成下一个词。
+
+此时需要对半成品LLM做限制在聊天模板中进行微调，例如当它遇到这样的模板“<聊天开始>秦始皇是<聊天终止> ”后不再无脑接龙，而是意识到这是一段完整的对话结束。我们称这个过程为指令微调。
+
+在训练时，MiniMind的指令和回答长度被截断在512，是为了节省显存空间。就像我们学习时，会先从短的文章开始，当学会阅读200字作文后，800字长文章就不需要再单独学习。
+
+> 在推理时通过调整RoPE线性差值，可以很方便地实现长度外推到1024或2048及以上。
+
+有监督微调时的输入数据类似于下面这种形式
+
+```
+<s>user
+给定一组问题和答案，将问题分类为开放式问题或封闭式问题。
+问题1: 你今年几岁了？答案：我今年27岁。问题2: 你认为自己是一个快乐的人吗？</s>
+<s>assistant
+问题1是封闭式问题，因为它的答案可以是一个确定的数字，即27岁。
+问题2是开放式问题，因为它需要详细的回答，而不是简单的“是”或“否”答案。它可能需要更多的细节和解释，因为人们对于“快乐”有不同的定义和标准，所以能够产生多种回答。</s>
+```
+
+字符串转为token后，假设token长度为 $n$，输入为前 $n-1$ 个token，标签为后 $n-1$ 个token。注意在计算交叉熵损失时需要遮盖问题token的损失。
+
+上面是单轮对话微调，微调后，模型学会了一个问题对应一个回答的聊天模板，如果想要模型记住历史信息，仅需在具备历史问答的更长聊天模板上进行进一步微调即可。对于小模型来说，长期记忆很难，所以并非必须进行该操作。
+
+
+#### 直接偏好优化
+
+在前面的训练中，minimind 已经具备了基本的对话能力，但是这样的能力完全基于单词接龙，缺少正例反例的激励。
+
+minimind 尚且未知什么回答是好的，什么是差的。我们希望它能够更符合人的偏好，给出更让人满意的回答。
+
+通过直接偏好优化数据集来对模型进行进一步微调，直接偏好数据集的单条样本由三条文本组成，分别为问题，被接受的回答，被拒绝的回答。
