--- a/人工智能.md
+++ b/人工智能.md
@@ -898,6 +898,80 @@ $$
 # 经典模型
 
 
+## 语音分离
+
+语音分离的主要任务是从混合的语音中分离出不同说话人的语音，由于分离出的语音往往难以和真实语音一一匹配，在训练和计算指标时，可能会选择改变语音排列顺序多次计算。
+
+
+### Conv-TasNet
+
+[JusperLee/Conv-TasNet: Conv-TasNet: Surpassing Ideal Time-Frequency Magnitude Masking for Speech Separation Pytorch's Implement](https://github.com/JusperLee/Conv-TasNet)
+
+这是一个端到端的方法，音频经过一个卷积核大小为L，步长为 L//2 的一维卷积转为特征，再输入Separator中计算多个mask，每个mask对应一个语音。
+
+
+![](./images/conv_tasnet_arch.png)
+
+每一个1-D Conv block 有两路输出，其中有一路和输入相加后作为下一个卷积模块的输入，另一路输出是计算mask时的输出，Conv-TasNet 在计算mask时将所有的1-D Conv block 另一路输出加起来。
+
+
+### Skim
+
+[espnet/espnet2/enh/layers/skim.py at master · espnet/espnet](https://github.com/espnet/espnet/blob/master/espnet2/enh/layers/skim.py)
+
+![](./images/skim_arch.png)
+
+对于输入特征 $W^{T\times N}$，将其按照时间分成 S 块，每块长度为 K。假设第 $l$ 层Skim块的输入为 $[W_l^1,W_l^2,\cdots, W_l^S]$，那么Seg-LSTM的映射函数可以写成
+
+$$
+\eqalign{
+  & \bar W_{l + 1}^s,c_{l + 1}^s,h_{l + 1}^s = {\mathop{\rm {Seg-LSTM}}\nolimits}\left( {W_l^s,\hat c_l^s,\hat h_l^s} \right)  \cr 
+  & W_{l + 1}^s = {\mathop{\rm LN}\nolimits} (\bar W_{l + 1}^s) + W_l^s \cr} 
+$$
+使用Mem-LSTM进行跨块的处理，令${C_{l + 1}} = \left[ {c_{l + 1}^1, \cdots ,c_{l + 1}^S} \right]$，${H_{l + 1}} = \left[ {h_{l + 1}^1, \cdots ,h_{l + 1}^S} \right]$
+$$
+\eqalign{
+  & {{\bar C}_{l + 1}} = {\rm{Mem - LST}}{{\rm{M}}_c}\left( {{C_{l + 1}}} \right)  \cr 
+  & {{\bar H}_{l + 1}} = {\rm{Mem - LST}}{{\rm{M}}_h}\left( {{H_{l + 1}}} \right)  \cr 
+  & {{\hat C}_{l + 1}} = {\mathop{\rm LN}\nolimits} \left( {{{\bar C}_{l + 1}}} \right) + {C_{l + 1}}  \cr 
+  & {{\hat H}_{l + 1}} = {\mathop{\rm LN}\nolimits} \left( {{{\bar H}_{l + 1}}} \right) + {H_{l + 1}} \cr} 
+$$
+为了实现因果性，可以将Seg-LSTM的映射函数改为
+
+$$
+\bar W_{l + 1}^s,c_{l + 1}^s,h_{l + 1}^s = {\rm{Seg - LSTM}}\left( {W_l^s,\hat c_l^{s - 1},\hat h_l^{s - 1}} \right)
+$$
+这样第 $s$ 块只依赖前面的 $s-1$ 段的信息。
+
+值得注意的是在训练时，每次输入的音频会被分成 S 段，然后将 S 段合并到批次这个维度，相当于每次训练 $S\times B$ 个批次的数据。SegLSTM中输入数据的维度为 $[B * S, K, D]$。
+
+对于MemLSTM，输入的是状态 $h,c\in R^{1\times B*S \times D}$，会将其转为 $[B, S, D]$ 再送入LSTM中计算。为了保证因果性，在计算之后只会保留前S-1段并后移一位，保证最开始的一段为0。
+
+在推理时，每次送入模型的只有一帧数据，每经过K帧通过MemLSTM计算一次状态。
+
+
+### Sepformer
+
+![](./images/sepformer_arch.png)
+
+将Transformer用于语音分离，注意这里的IntraTransformer和InterTransformer并不是指对于时间维度和频率维度进行处理。
+
+对于输入 $x\in R^{B\times C\times T}$ 将其在时间维度上分段，假设分成 K 段，每段长度为 S，IntraTransformer的输入为 $x\in R^{B * S \times K \times C}$，InterTransformer的输入为 $x\in R^{B * K \times S \times C}$
+
+
+### SepReformer
+
+[dmlguq456/SepReformer: Official repository of SepReformer for speech separation](https://github.com/dmlguq456/SepReformer)
+
+![](https://github.com/dmlguq456/SepReformer/raw/main/data/figure/SepReformer_Architecture.png)
+
+输入 $x\in R^{1\times N}$ 经过一维卷积+GELU为 $X\in R^{F\times T}$，经过一个编码器，编码器中的 Global transformer 和 Local Transformer 的结构如下
+
+![](https://fordemopage.github.io/SepReformer/static/images/Figure_4.png)
+
+与其它模型在最后拆分不同的mask，SepReformer在中间就拆分mask，解码器中的Global transformer 和 Local Transformer 共享参数，除此之外还有CS Transformer。
+
+
 ## 图像识别
 
 一些可供使用的库：
