--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -457,6 +457,17 @@ def findSurpasser(arr):
 ```
 
 
+> 如果是统计右侧小于自己的数，可以改成从大到小排
+
+> 如果数组中包含重复元素，那么还需要有一个指数数组，或者更简单的，将数组改成 (num,  i) 这种形式，如下所示
+
+```python
+for i, a in enumerate(arr):
+	m[(a, i)] = 0
+	dup.append((a, i))
+```
+
+
 ### 统计数组中前k个经常出现的元素
 
 [Top K Frequent Elements in an Array - GeeksforGeeks](https://www.geeksforgeeks.org/find-k-numbers-occurrences-given-array/)
@@ -488,11 +499,276 @@ def topKFrequent(arr, k):
     return res
 ```
 
+### 找到数据流中的中位数
+
+给定一个数据流，如何找到中位数，假设有偶数个数，那么需要对中间两个进行平均。
+
+使用堆实现，主要思路是维持两个堆，一个堆存储较小值，另一个堆存储较大值
+
+注意python中只给出了最小堆的实现，最大堆可以通过每次传入数据时加上负号实现。
+
+```python
+import heapq
+
+# Function to find the median of a stream of data
+def getMedian(arr):
+    
+    # Max heap to store the smaller half of numbers
+    leftMaxHeap = []
+    
+    # Min heap to store the greater half of numbers
+    rightMinHeap = []
+    
+    res = []
+  
+    for num in arr:
+        # Insert new element into max heap (negating for max behavior)
+        heapq.heappush(leftMaxHeap, -num)
+        
+        # Move the top of max heap to min heap to maintain order
+        temp = -heapq.heappop(leftMaxHeap)
+        heapq.heappush(rightMinHeap, temp)
+      
+        # Balance heaps if min heap has more elements
+        if len(rightMinHeap) > len(leftMaxHeap):
+            temp = heapq.heappop(rightMinHeap)
+            heapq.heappush(leftMaxHeap, -temp)
+        
+        # Compute median based on heap sizes
+        if len(leftMaxHeap) != len(rightMinHeap):
+            median = -leftMaxHeap[0]
+        else:
+            median = (-leftMaxHeap[0] + rightMinHeap[0]) / 2.0
+        
+        res.append(median)
+    
+    return res
+```
 
 
+### 给定范围内最常出现的整数
+
+两个等长的数组分别给出左端点和右端点，求出这些范围内最常出现的整数
+
+使用difference 数组求解：定义一个diff数组，`diff[left] += 1`，对应的 `diff[right+1] -=1`，这样diff中大于0的表示这里有多少个起点，小于0表示这里有多少个终点，求前缀和时最大值的位置即代表最常出现的数。
+
+```python
+MAX = 1000
+
+def maximumOccurredElement(L, R, n):
+ 
+    # Initialising all element of array to 0.
+    arr = [0 for i in range(MAX)]
+ 
+    # Adding +1 at Li index and subtracting 1 at Ri index.
+    for i in range(0, n, 1):
+        arr[L[i]] += 1
+        arr[R[i] + 1] -= 1
+ 
+    # Finding prefix sum and index
+    # having maximum prefix sum.
+    msum = arr[0]
+    for i in range(1, MAX, 1):
+        arr[i] += arr[i - 1]
+        if (msum < arr[i]):
+            msum = arr[i]
+            ind = i
+    return ind
+```
 
 
+### 买卖股票
 
+一个数组存储了每天的股票价格，问在给定的交易次数下，所获取的最大利润。该问题有如下三个变体：
+
+1、如果只允许一次交易：最大利润为最大值减去最小值
+
+```python
+def maxProfit(prices):
+    minSoFar = prices[0]
+    res = 0
+
+    # Update the minimum value seen so far 
+    # if we see smaller
+    for i in range(1, len(prices)):
+        minSoFar = min(minSoFar, prices[i])
+        
+        # Update result if we get more profit                
+        res = max(res, prices[i] - minSoFar)
+    
+    return res
+```
+
+
+2、只允许至多两次交易：
+
+一种做法是直接迭代两次，两个循环的思路和一个循环的基本一致
+
+```python
+class Solution:
+    
+    def maxProfit1(self, idx, arr):
+        minP = arr[idx]
+        profit = 0
+        for i in range(idx + 1, len(arr)):
+            if minP < arr[i]:
+                profit = max(profit, arr[i] - minP)
+            else:
+                minP = arr[i]
+        return profit
+    
+    def maxProfit(self, arr):
+        # code here
+        
+        minP = arr[0]
+        profit = 0
+        
+        for i in range(1, len(arr)):
+            if minP < arr[i]:
+                profit = max(profit, arr[i] - minP + self.maxProfit1(i, arr))
+            else:
+                minP = arr[i]
+        return profit
+```
+
+这样时间复杂度过高
+
+另一种方法考虑到最多进行两次交易，因此可以分成两段，即从 0 到 i 进行一次交易，从 i 到 n-1进行一次交易
+
+```python
+def maxProfit(arr):
+	profit = 0
+	profits = [0] * len(arr)
+	
+	minP = arr[0]
+	# 计算从 0 到 i 的利润最大值
+	for i in range(1, len(arr)):
+		if minP < arr[i]:
+			profits[i] = max(profits[i-1], arr[i] - minP) 
+			profit = max(profit, profits[i])
+		else:
+			minP = arr[i]
+			profits[i] = profits[i - 1]
+	
+	maxP = arr[-1]
+	# 计算从 n-1 到i的利润最大值
+	for j in range(len(arr) - 2, -1, -1):
+		if maxP > arr[j]:
+			profit = max(profit, maxP - arr[j] + profits[j])  
+		else:
+			maxP = arr[j]
+	
+	return profit
+```
+
+
+3、至多k次交易
+
+最一般的方法是使用回溯法（递归），在某一天，只能进行三项操作，分别为买，卖和什么都不做
+
+```python
+def _solve(arr, i, k, state):
+    if i == len(arr) or k == 0:
+        return 0
+    profit = 0
+    if state == "buy":
+        profit = _solve(arr, i + 1, k, state)   # 什么都不做
+        profit = max(profit, _solve(arr, i + 1, k, "sell") - arr[i])  
+    elif state == "sell":
+        profit = _solve(arr, i + 1, k, state)   # 什么都不做
+        profit = max(profit, _solve(arr, i + 1, k - 1, "buy") + arr[i])
+    return profit
+
+def solve(arr, k):
+    profit = _solve(arr, 0, k, "buy")
+    print(profit)
+```
+
+这种方法时间复杂度过高，存在大量重复计算步骤。
+
+可以通过一个矩阵保存所有情况下的利润，避免重复计算。
+
+```python
+def solveProfit(arr, i, k, state, memo):
+    if i == len(arr) or k == 0:
+        return 0
+    profit = 0
+    if memo[i][k][state] != -1:
+        return memo[i][k][state]
+    
+    if state == 1:
+        profit = solveProfit(arr, i+1, k, state, memo)
+        profit = max(profit, solveProfit(arr, i+1, k, 0, memo) - arr[i])
+    elif state == 0:
+        profit = solveProfit(arr, i+1, k, state, memo)
+        profit = max(profit, solveProfit(arr, i+1, k-1, 1, memo) + arr[i])
+    
+    memo[i][k][state] = max(memo[i][k][state], profit)
+    return profit
+
+class Solution:
+    
+    def maxProfit(self, arr, k):
+        # code here
+        
+        n = len(arr)
+        memo = [[[-1]*2 for _ in range(k + 1)]
+            for _ in range(n)]
+        profit = solveProfit(arr, 0, k, 1, memo)
+        return profit
+```
+
+
+另外还有动态规划的方法，这样可以不使用递归
+
+参考上面的递归过程，可以得出动态递归方程为（从后向前）：
+
+```
+Buy: dp[i][k][1] = max(dp[i+1][k][1], dp[i+1][k][0] - prices[i])
+
+Sell: dp[i][k][0] = max(dp[i+1][k][0], dp[i+1][k-1][1] + prices[i])
+```
+
+这里的dp指的是在第`i`天，有`k`次交易机会，状态为 1（可以买）或 0（可以卖）会得到的收益
+
+
+### 在一个可以循环移位的序列中找到最大和子序列
+
+首先在一个序列中找到最大和子序列的算法如下
+
+```python
+def findMaxSum(arr):
+    n = len(arr)
+    cur_sum = 0
+    max_sum = -1e5
+    for i in range(n):
+        cur_sum += arr[i]
+        max_sum = max(max_sum, cur_sum)
+        if cur_sum < 0:
+            cur_sum = 0
+    return max_sum
+```
+
+其思路是求前缀和，如果前缀和小于0，就将前缀和置为0（相当于重新开始一个子序列），重新开始求，前缀和的最大值就是最大和子序列。
+
+对于本问题，由于序列可以循环移位，如果将所有移位的情形全部列举，时间复杂度过高。可以换一种思路，对于循环后的子序列的最大和子序列，其实相当于在原本的子序列中求最小和子序列，求完最小和之后用总和减去最小和即为最大和
+
+```python
+def circularSubarraySum(arr):
+    ##Your code here
+    n = len(arr)
+    max_sum1 = findMaxSum(arr)
+    
+    s_sum = 0
+    for i in range(n):
+        s_sum += arr[i]
+        arr[i] = -arr[i]
+    
+    min_sum = findMaxSum(arr)
+    max_sum2 = s_sum + min_sum
+    
+    return max(max_sum1, max_sum2)
+```
 
 
 
@@ -582,6 +858,44 @@ def countTriplets(arr, target):
 ```
 
 
+为了节省空间，还可以先排序，先在外侧循环确定第一个数，再使用两个指针确定第2个和第3个数
+
+```python
+def threeSum(arr, target):
+	n = len(arr)
+	arr.sort()
+	sols = []
+	for i in range(n):
+		# arr[i-1] 之前已经找过了，避免重复
+		if i > 0 and arr[i] == arr[i-1]:
+			continue
+		
+		l = i + 1  # 第二个数
+		r = n - 1 # 第三个数
+		
+		while l < r:
+			s = arr[i] + arr[l] + arr[r]
+			if s == target:
+				sols.append([arr[i], arr[l], arr[r]])
+				l += 1
+				r -= 1
+				
+				# 避免重复
+				while l < r and arr[l] == arr[l-1]:
+					l += 1
+				
+				while r > l and arr[r] == arr[r+1]:
+					r -= 1
+			
+			elif s < target:
+				l += 1
+			else:
+				r -= 1
+			
+	return sols
+```
+
+
 ### 四数之和
 
 对于四数之和，可以采用上面的思路，先确定两个值，再在内部循环时按照二数之和求解
@@ -649,6 +963,30 @@ def longestSubarrayDivK(arr, k):
 ```
 
 存储所有前缀和出现的位置，这样如何再次出现这个前缀和，就证明这两个前缀和中间的序列之和能被 K 整除。
+
+
+### 最长子序列之和为 K
+
+与上一个题目类似，使用一个字典保存前缀和，然后判断当前和减去目标值的结果是否在前缀和字典中。
+
+```python
+def subarraySum(arr, target):
+	# code here
+	n = len(arr)
+	prefixs = {}
+	s = 0
+	for i in range(n):
+		s += arr[i]
+		
+		if s == target:
+			return [1, i+1]
+		
+		if s - target in prefixs:
+			return [prefixs[s - target]+1, i+1]
+		
+		prefixs[s] = i+1
+	return [-1]
+```
 
 
 ### 找到所有的序列对(a,b)使得 a%b = k
@@ -757,3 +1095,435 @@ def countDistinctSubarray(self,arr, n):
 	return cnt
 ```
 
+
+
+## 搜索问题
+
+搜索分为线性搜索，二分搜索和双指针技术
+
+线性搜索主要用于未排序的列表、小数据、链表等。线性搜索往往需要在每一次循环中进行一次条件判断，可以在列表的末尾添加目标值，这样直接用while
+
+```python
+def sentinelSearch(arr, n, key):
+
+    # Last element of the array
+    last = arr[n - 1]
+
+    # Element to be searched is
+    # placed at the last index
+    arr[n - 1] = key
+    i = 0
+
+    while (arr[i] != key):
+        i += 1
+
+    # Put the last element back
+    arr[n - 1] = last
+
+    if ((i < n - 1) or (arr[n - 1] == key)):
+        print(key, "is present at index", i)
+    else:
+        print("Element Not found")
+```
+
+二分搜索实现如下，需要数据排好序，或者有一定的规律
+
+```python
+def binarySearch(arr, low, high, x):
+
+    while low <= high:
+
+        mid = low + (high - low) // 2
+
+        # Check if x is present at mid
+        if arr[mid] == x:
+            return mid
+
+        # If x is greater, ignore left half
+        elif arr[mid] < x:
+            low = mid + 1
+
+        # If x is smaller, ignore right half
+        else:
+            high = mid - 1
+
+    # If we reach here, then the element
+    # was not present
+    return -1
+```
+
+>如果是一个无限的有序数组，可以采用自定义边界的方法，如
+>第一轮搜索 [0, 1]
+>第二轮搜索 [1, 2]
+>第三轮搜索 [2, 4]
+>第四轮搜索 [4, 8]
+
+双指针技术用两个指针同时索引，一般一个位于开始，另一个位于末尾，并且对于数据有一定的排序要求。
+
+二分搜索的实现：
+
+C++
+
+```cpp
+// C++ code to show how to use the binary_search()
+// for searching an element in the given range
+#include <bits/stdc++.h>
+using namespace std;
+
+// Function for check an element whether it
+// is present or not
+void isPresent(vector<int> &arr, int val) {
+  
+    // using binary_search to check if val exists
+    if (binary_search(arr.begin(), arr.end(), val))
+        cout << val << " exists in vector";
+    else
+        cout << val << " does not exist";
+
+    cout << endl;
+}
+
+int main() {
+    vector<int> arr = {10, 15, 20, 25, 30, 35};
+
+    int val1 = 15;
+    int val2 = 23;
+
+    isPresent(arr, val1);
+    isPresent(arr, val2);
+
+    return 0;
+}
+```
+
+Python 的bisect包提供了二分搜索并插入
+
+```python
+# Python code to demonstrate the working of
+# bisect(), bisect_left() and bisect_right()
+
+# importing "bisect" for bisection operations
+import bisect
+
+# initializing list
+li = [1, 3, 4, 4, 4, 6, 7]
+
+# using bisect() to find index to insert new element
+# returns 5 ( right most possible index )
+print ("Rightmost index to insert, so list remains sorted is : ",
+	end="")
+print (bisect.bisect(li, 4))
+
+# using bisect_left() to find index to insert new element
+# returns 2 ( left most possible index )
+print ("Leftmost index to insert, so list remains sorted is : ", 
+	end="")
+print (bisect.bisect_left(li, 4))
+
+# using bisect_right() to find index to insert new element
+# returns 4 ( right most possible index )
+print ("Rightmost index to insert, so list remains sorted is : ",
+	end="")
+print (bisect.bisect_right(li, 4, 0, 4))
+```
+
+
+### 三分搜索
+
+```python
+def ternarySearch(l, r, key, ar):
+    while r >= l:
+        
+        # Find mid1 and mid2
+        mid1 = l + (r-l) // 3
+        mid2 = r - (r-l) // 3
+
+        # Check if key is at any mid
+        if key == ar[mid1]:
+            return mid1
+        if key == ar[mid2]:
+            return mid2
+
+        # Since key is not present at mid, 
+        # Check in which region it is present
+        # Then repeat the search operation in that region
+        if key < ar[mid1]:
+            # key lies between l and mid1
+            r = mid1 - 1
+        elif key > ar[mid2]:
+            # key lies between mid2 and r
+            l = mid2 + 1
+        else:
+            # key lies between mid1 and mid2
+            l = mid1 + 1
+            r = mid2 - 1
+
+    # key not found
+    return -1
+```
+
+
+### 在未排序的数组中找到第K个最小的数
+
+1、先排序再找，时间复杂度为 nlog(n)，空间复杂度为 1
+2、用最大堆保存K个数，时间复杂度为 nlog(K)，空间复杂度为 K
+3、快速选择算法，虽然最差情况下时间复杂度为 $n^2$，但是实践使用时是快的。
+
+快速选择算法基于快速排序算法，partition的部分一致，只是在后续搜索时有差别，当找到pivot的位置时，比较该位置左侧是否包含了k-1个数，如果包含了，那么pivot就是需要的数，如果左侧大于k-1个数，就在左侧找，否则在右侧找。
+
+```python
+def kthSmallest(arr, l, r, k):
+
+    # if k is smaller than number of
+    # elements in array
+    if (k > 0 and k <= r - l + 1):
+
+        # Partition the array around last
+        # element and get position of pivot
+        # element in sorted array
+        index = partition(arr, l, r)
+
+        # if position is same as k
+        if (index - l == k - 1):
+            return arr[index]
+
+        # If position is more, recur 
+        # for left subarray 
+        if (index - l > k - 1):
+            return kthSmallest(arr, l, index - 1, k)
+
+        # Else recur for right subarray 
+        return kthSmallest(arr, index + 1, r, 
+                            k - index + l - 1)
+    print("Index out of bound")
+```
+
+### 在循环移位后的排序数组中搜索
+
+对于一个排好序的数组，如果进行了部分循环移位，在这种数组进行搜索
+
+1、使用两次二分搜索，第一次搜索最小值的位置，再根据最小值的位置进行二分搜索
+2、在上面搜索最小值时，已经用了这样的原理，即mid左侧或者右侧的数组必定有一侧是排好序的，如对于左侧，只要 `arr[low]<arr[mid]` 那么就是排好序的，如果key落在`arr[low]` 和 `arr[high]` 这个范围之内，就在左侧找，反之就在右侧找。 
+
+
+### 在三个排好序的数组中找到最相近的数
+
+有三个已经排好序的数组，现在要找到三个数组中最相近的三个数
+
+使用三个指针分别索引这三个数组，每次会索引到三个数，求出这三个数中的最大值和最小值，然后计算最大值和最小值之间的差值，每次循环时只更新最小值对应的数组索引。
+
+```python
+def findCloset(A, B, C, p, q, r):
+    diff = 1e9
+    res_i = 0
+    res_j = 0
+    res_k = 0
+    # Traverse Array
+    i = 0
+    j = 0
+    k = 0
+    while(i < p and j < q and k < r):
+        # Find minimum and maximum of current three elements
+        minimum = min(A[i], min(B[j], C[k]))
+        maximum = max(A[i], max(B[j], C[k]));
+ 
+        # Update result if current diff is
+        # less than the min diff so far
+        if maximum-minimum < diff:
+            res_i = i
+            res_j = j
+            res_k = k
+            diff = maximum - minimum;
+
+        if diff == 0:
+            break
+            
+        # Increment index of array with smallest value
+        if A[i] == minimum:
+            i = i+1
+        elif B[j] == minimum:
+            j = j+1
+        else:
+            k = k+1
+```
+
+
+### 求两个相同大小的有序数组合并后的中位数
+
+https://www.geeksforgeeks.org/median-of-two-sorted-arrays
+
+一种方法是使用归并排序中的归并方法
+
+另一种方法是使用二分搜索
+
+这里的二分搜索需要利用到中位数的一个性质，对于一个长度为 2n 的数组，中位数之前需要有n-1个数，因此如果确定了一个数组的mid，另一种数组的mid可以设置为 n-mid，这里的mid并不指一个元素，而是两个元素之间的边界，mid两边的元素分为记为`l`和`r`，只要满足两个数组的 `l` 和 `r` 相互交叉即可。
+
+```python
+def getMedian(a, b):
+    n = len(a)
+    
+    # We can take [0...n] number of elements from a[]
+    low, high = 0, n
+    
+    while low <= high:
+      
+        # Take mid1 elements from a
+        mid1 = low + (high - low) // 2
+        
+        # Take mid2 elements from b
+        mid2 = n - mid1
+        
+        # Find elements to the left and right of partition in a
+        l1 = float('-inf') if mid1 == 0 else a[mid1 - 1]
+        r1 = float('inf') if mid1 == n else a[mid1]
+        
+        # Find elements to the left and right of partition in b
+        l2 = float('-inf') if mid2 == 0 else b[mid2 - 1]
+        r2 = float('inf') if mid2 == n else b[mid2]
+        
+        # If it is a valid partition
+        if l1 <= r2 and l2 <= r1:
+            return (max(l1, l2) + min(r1, r2)) / 2.0
+        
+        # If we need to take fewer elements from a
+        if l1 > r2:
+            high = mid1 - 1
+            
+        # If we need to take more elements from a
+        else:
+            low = mid1 + 1
+    
+    return 0
+```
+
+
+### 在一个几乎排好序的数组中搜索
+
+已有一个几乎排好序的数组，`arr[i]` 只会和 `arr[i-1]` 或者 `arr[i+1]` 交换位置
+
+可以使用二分查找，不过需要考虑 mid, mid - 1 和 mid + 1三个位置，在判断mid-1和mid+1时，还需要注意不能让其超出`l`和 `r`
+
+```python
+def binarySearch(arr, l, r, x):
+
+    if (r >= l):
+
+        mid = int(l + (r - l) / 2)
+
+        # If the element is present at one
+        # of the middle 3 positions
+        if (arr[mid] == x):
+            return mid
+        if (mid > l and arr[mid - 1] == x):
+            return (mid - 1)
+        if (mid < r and arr[mid + 1] == x):
+            return (mid + 1)
+
+        # If element is smaller than mid, then
+        # it can only be present in left subarray
+        if (arr[mid] > x):
+            return binarySearch(arr, l, mid - 2, x)
+
+        # Else the element can only
+        # be present in right subarray
+        return binarySearch(arr, mid + 2, r, x)
+
+    # We reach here when element
+    # is not present in array
+    return -1
+```
+
+
+## 排序问题
+
+### 快速排序
+
+对于一个序列，先选定一个值作为pivot，将数组排列成pivot右侧的值都大于等于pivot，左侧的值都小于等于pivot。
+
+具体排列方法如下
+
+首先选定一个pivot，一般选定子数组的左端，该位置记为index，另外分别从子数组的左端（记为left）和右端（记为right）向中间进发，先从右端开始。
+
+从右端开始遍历，如果`arr[right]` 比pivot大，继续遍历，如果`arr[right]`小于 pivot，令`arr[index]` 等于`arr[right]`，然后将right这个位置记为新的index。
+
+右端暂时遍历完后，从左端开始遍历，同样的如果`arr[left]` 大于pivot，令 `arr[index]` 等于 `arr[left]`，然后将left这个位置记为新的index。
+
+如此循环下去，直到left大于right，循环结束之后，令`arr[index]`等于pivot。
+
+```python
+def partition(arr, l, r):
+
+    i = l
+    j = r
+
+    pivit = arr[l]
+    index = l
+    while i < j:
+        while j > i:
+            if arr[j] < pivit:
+                arr[index] = arr[j]
+                index = j
+                break
+            j -= 1
+        
+        while j > i:
+            if arr[i] > pivit:
+                arr[index] = arr[i]
+                index = i
+                break
+            i += 1
+    arr[index] = pivit
+    return index
+
+def quickSort(arr, l, r):
+    if l < r and l >= 0:
+
+        idx = partition(arr, l, r)
+
+        quickSort(arr, l, idx-1)
+        quickSort(arr, idx+1, r)
+    
+arr = [ 1, 3, 2, 0, 8 ]
+n = len(arr)
+quickSort(arr, 0, n-1)
+```
+
+对于已经排好序的数组，会出现时间复杂度为 $O(n^2)$ 的情况，为了避免这种情况，可以随机选择pivot，并将其移到数组最左端
+
+```python
+index = random.randint(l, r)
+pivit = arr[index]
+arr[index], arr[l] = arr[l], arr[index]
+index = l 
+```
+
+对于数组包含大量重复元素的情况，可以在进行递归前进行判断（需要partition函数返回pivot）
+
+```python
+idx, pivit = partition(arr, l, r)
+li = idx - 1
+ri = idx + 1
+
+while li > l and arr[li] == pivit:
+	li -= 1
+while ri < r and arr[ri] == pivit:
+	ri += 1
+
+quickSort(arr, l, li)
+quickSort(arr, ri, r)
+```
+
+partition 函数的另外一种写法
+
+```python
+def partition(arr, l, r):
+    x = arr[r]
+    i = l
+    for j in range(l, r):
+        if arr[j] <= x:
+            arr[i], arr[j] = arr[j], arr[i]
+            i += 1
+            
+    arr[i], arr[r] = arr[r], arr[i]
+    return i
+```
